style: fix mis-aligned changeset numbers in annotation view

--- a/kallithea/front-end/style.less
+++ b/kallithea/front-end/style.less
@@ -922,6 +922,7 @@ div.annotatediv {
   border-left: 1px solid #ccc;
 }
 .code-highlight pre,
+.annotatediv pre,
 .linenodiv pre {
   padding: 5px 2px 0px 5px;
   margin: 0;
